--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </p>
 
             <div class="containerex">
-              <img class="exampleWork" src="../images/image 2.png" alt="Show" />
+              <img class="exampleWork" src="./images/image 2.png" alt="Show" />
               <button class="btnLeft">
                 <img src="../images/left Vector (Stroke).svg" alt="" />
               </button>
