--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <div class="containerex">
               <img class="exampleWork" src="./images/image 2.png" alt="Show" />
               <button class="btnLeft">
-                <img src="../images/left Vector (Stroke).svg" alt="" />
+                <img src="./images/left Vector (Stroke).svg" alt="" />
               </button>
               <button class="btnRight">
-                <img src="../images/right Vector (Stroke).svg" alt="" />
+                <img src="./images/right Vector (Stroke).svg" alt="" />
               </button>
             </div>
 
@@ -118,7 +118,7 @@
             <div class="projectSlider">
               <img
                 class="slidermiddle"
-                src="../images/sliderGroup 8.4.svg"
+                src="./images/sliderGroup 8.4.svg"
                 alt=""
               />
             </div>
@@ -149,7 +149,7 @@
                 </li>
               </ul>
             </nav>
-            <img src="../images/image 2.1.png" alt="" />
+            <img src="./images/image 2.1.png" alt="" />
           </div>
         </div>
       </section>
@@ -158,15 +158,15 @@
         <div class="cameraonline section3__cameraonline">
           <h2 class="three">online control</h2>
           <div class="camera cameraonline__camera">
-            <img src="../images/Rectangle 6.7.svg" alt="" />
-            <img src="../images/groupcamera.svg" alt="" />
-            <img src="../images/Rectangle 6.7.svg" alt="" />
+            <img src="./images/Rectangle 6.7.svg" alt="" />
+            <img src="./images/groupcamera.svg" alt="" />
+            <img src="./images/Rectangle 6.7.svg" alt="" />
           </div>
         </div>
         <div class="onlinevideo section3__onlinevideo">
           <div class="onlinecontrol">
             <button class="btn-video">
-              <img src="../images/sec3Polygon.svg" alt="" />
+              <img src="./images/sec3Polygon.svg" alt="" />
             </button>
           </div>
         </div>
@@ -208,9 +208,9 @@
       <section class="section4">
         <h2 class="four">TYPES OF REPAIR</h2>
         <div class="camera">
-          <img src="../images/cameraLine.svg" alt="" />
-          <img class="centralService" src="/images/service.svg" alt="" />
-          <img src="../images/cameraLine.svg" alt="" />
+          <img src="./images/cameraLine.svg" alt="" />
+          <img class="centralService" src="./images/service.svg" alt="" />
+          <img src="./images/cameraLine.svg" alt="" />
         </div>
         <div class="three-types">
           <div class="type1 section4__type1">
@@ -274,12 +274,12 @@
         </h2>
 
         <div class="containerex">
-          <img class="exampleWork" src="../images/watch.png" alt="Show" />
+          <img class="exampleWork" src="./images/watch.png" alt="Show" />
           <button class="btnLeft">
-            <img src="../images/left Vector (Stroke).svg" alt="" />
+            <img src="./images/left Vector (Stroke).svg" alt="" />
           </button>
           <button class="btnRight">
-            <img src="../images/right Vector (Stroke).svg" alt="" />
+            <img src="./images/right Vector (Stroke).svg" alt="" />
           </button>
         </div>
       </section>
@@ -366,8 +366,8 @@
             <div class="save section41__save">
               <div class="moneybox save__moneybox">
                 <div class="div1">
-                  <img class="piggy" src="../images/piggy.svg" alt="piggy" />
-                  <img class="usd" src="../images/usd.svg" alt="usd" />
+                  <img class="piggy" src="./images/piggy.svg" alt="piggy" />
+                  <img class="usd" src="./images/usd.svg" alt="usd" />
                 </div>
               </div>
               <p class="saveText textNunito">
@@ -404,20 +404,20 @@
         </div>
         <div class="yellow fantasies__yellow">
           <div class="woodenclock fantasies__woodenclock">
-            <img src="../images/woodenclock.png" alt="woodenclock" />
+            <img src="./images/woodenclock.png" alt="woodenclock" />
           </div>
 
           <div class="artistroom fantasies__artistroom">
-            <img src="../images/artistroom.png" alt="artistroom" />
+            <img src="./images/artistroom.png" alt="artistroom" />
           </div>
         </div>
         <div class="green fantasies__green">
           <div class="sofa fantasies__sofa">
-            <img src="../images/sofa.png" alt="sofa" />
+            <img src="./images/sofa.png" alt="sofa" />
           </div>
 
           <div class="flower fantasies__flower">
-            <img src="../images/flower.png" alt="flower" />
+            <img src="./images/flower.png" alt="flower" />
           </div>
         </div>
       </section>
@@ -427,7 +427,7 @@
         <div class="arms">
           <img
             class="centralService"
-            src="../images/Groupforourclients.svg"
+            src="./images/Groupforourclients.svg"
             alt=""
           />
         </div>
@@ -463,14 +463,14 @@
             </div>
             <div class="squarePeriod">
               <div class="imgsquare squarePeriod__imgsquare">
-                <img class="line02" src="../images/Group 21.4.svg" alt="line02" />
+                <img class="line02" src="./images/Group 21.4.svg" alt="line02" />
               </div>
               <div class="squaretext squarePeriod__squaretext textYeseva">
                 40 m2
               </div>
               <img src="../images/Vector 2.svg" alt="" />
               <div class="imgperiod squarePeriod__imgperiod">
-                <img src="../images/Group.svg" alt="" />
+                <img src="./images/Group.svg" alt="" />
               </div>
               <div class="periodtext textYeseva">48 DAYS</div>
             </div>
@@ -480,7 +480,7 @@
               <div>
                 <img
                   class="photo photoName__photo"
-                  src="../images/sergey.png"
+                  src="./images/sergey.png"
                   alt="sergey"
                 />
               </div>
@@ -502,14 +502,14 @@
             </div>
             <div class="squarePeriod">
               <div class="imgsquare squarePeriod__imgsquare">
-                <img class="line02" src="../images/Group 21.4.svg" alt="line02" />
+                <img class="line02" src="./images/Group 21.4.svg" alt="line02" />
               </div>
               <div class="squaretext squarePeriod__squaretext textYeseva">
                 90 m2
               </div>
               <img src="../images/Vector 2.svg" alt="" />
               <div class="imgperiod squarePeriod__imgperiod">
-                <img src="../images/Group.svg" alt="" />
+                <img src="./images/Group.svg" alt="" />
               </div>
               <div class="periodtext textYeseva">128 DAYS</div>
             </div>
@@ -519,7 +519,7 @@
               <div>
                 <img
                   class="photo photoName__photo"
-                  src="../images/egor.png"
+                  src="./images/egor.png"
                   alt="egor"
                 />
               </div>
@@ -541,14 +541,14 @@
             </div>
             <div class="squarePeriod">
               <div class="imgsquare squarePeriod__imgsquare">
-                <img class="line02" src="/images/Group 21.4.svg" alt="line02" />
+                <img class="line02" src="./images/Group 21.4.svg" alt="line02" />
               </div>
               <div class="squaretext squarePeriod__squaretext textYeseva">
                 56 m2
               </div>
               <img src="../images/Vector 2.svg" alt="" />
               <div class="imgperiod squarePeriod__imgperiod">
-                <img src="../images/Group.svg" alt="" />
+                <img src="./images/Group.svg" alt="" />
               </div>
               <div class="periodtext textYeseva">86 DAYS</div>
             </div>
@@ -630,14 +630,14 @@
           <div class="email">
             <a href="#">
               <div class="extent">
-                <img src="../images/email1.svg" alt="" />
+                <img src="./images/email1.svg" alt="" />
               </div>
             </a>
           </div>
           <div class="insta">
             <a href="#">
               <div class="insta1">
-                <img class="insta2" src="../images/Vector.svg" alt="" />
+                <img class="insta2" src="./images/Vector.svg" alt="" />
               </div>
             </a>
           </div>
